# fastapi

./: .travis.yml  3old.pyproject.toml  pyproject.toml  pyproject.toml.old
fastapi.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: test.sh
