[tool.poetry]
name = "fastapi"
version = "0.1.0"
description = "fastapitest"
authors = ["Your Name <you@example.com>"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Development Status :: 4 - Beta",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
]


[tool.poetry.dependencies]
python = "^3.8"
flick = "^0.1"
uvicorn = "^0.11.1"
starlette = "^0.13.0"
flit = "^2.1.0"

[[source]]
name = "pypi"
url = "https://pypi.org/simple"
verify_ssl = true

[dev-packages]
mypy = "*"
black = "*"
jupyter = "*"
better-exceptions = "*"
pytest = "*"
pytest-cov = "*"
isort = "*"
requests = "*"
flit = "*"
mkdocs = "*"
mkdocs-material = "*"
markdown-include = "*"
autoflake = "*"
email-validator = "*"
ujson = "*"
flake8 = "*"
python-multipart = "*"
sqlalchemy = "*"
uvicorn = "*"

[packages]
starlette = "==0.12.9"
pydantic = "==0.32.2"
databases = {extras = ["sqlite"],version = "*"}
hypercorn = "*"
orjson = "*"
flit = "*"

[requires]
python_version = "3.6"

[pipenv]
allow_prereleases = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"


# [build-system]
# requires = ["poetry>=0.12"]
# build-backend = "poetry.masonry.api"

# # [build-system]
# # requires = ["flit"]
# # build-backend = "flit.buildapi"



# [tool.flit.metadata.urls]
# Documentation = "https://fastapi.tiangolo.com/"

# [tool.flit.metadata.requires-extra]
# [tool.poetry.dependencies]

